[package]
name = "rttp"
version = "0.1.0"
authors = ["fewensa <fewensa@protonmail.com>"]
description = "Rust http lib"
homepage = "https://github.com/fewensa/rttp"
repository = "https://github.com/fewensa/rttp"
license = "MIT"
keywords = ["http"]
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]

readme = "README.md"
edition = "2018"

[dependencies]

rttp_client = { version = "=0.1.0", optional = true, path = "../rttp_client", features = [ "tls-native" ] }


[features]
default = []

all = ["rttp_client"]
client = ["rttp_client"]
#client_tls_native = ["rttp_client"]
#client_tls_rustls = ["rttp_client"]


#[target.'cfg(feature = "all")'.dependencies]
#rttp_client = { version = "=0.1.0", path = "../rttp_client", optional = true, default-features = false, features = [ "tls-native" ] }
#
#[target.'cfg(feature = "client")'.dependencies]
#rttp_client = { version = "=0.1.0", path = "../rttp_client", optional = true, default-features = false, features = [] }
#
#[target.'cfg(feature = "client_tls_native")'.dependencies]
#rttp_client = { version = "=0.1.0", path = "../rttp_client", optional = true, default-features = false, features = [ "tls-native" ] }
#
#[target.'cfg(feature = "client_tls_rustls")'.dependencies]
#rttp_client = { version = "=0.1.0", path = "../rttp_client", optional = true, default-features = false, features = [ "tls-rustls" ] }

