[package]
name = "rttp_client"
version = "0.1.0"
authors = ["fewensa <fewensa@protonmail.com>"]
description = "Rust http client lib"
homepage = "https://github.com/fewensa/rttp"
repository = "https://github.com/fewensa/rttp"
license = "MIT"
keywords = ["http"]
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]

readme = "README.md"
edition = "2018"

[dependencies]
url = "2"
percent-encoding = "2"

mime = "0.3"
mime_guess = "2"

rand = "0.7"
socks = "0.3"
base64 = "0.11"
flate2 = "1.0"
httpdate = "0.3"


native-tls = { version = "0.2", optional = true }
rustls = { version = "0.16", optional = true }
webpki-roots = { version = "0.18", optional = true }
webpki = { version = "0.21", optional = true }



[features]
default = []

tls-native = ["native-tls"]
tls-rustls = ["rustls", "webpki", "webpki-roots"]

